--- a/estilo (1).css
+++ b/estilo (1).css
@@ -3,7 +3,7 @@ h1
 {
 font-family:'Fredoka One', cursive;
 text-align:center;
-background-color:purple;
+background-color:gray;
 color:white;
 }
 body
